# quirc-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
benches/: bench.rs
examples/: inspect.rs  qrtest.rs  simple.rs
examples/util/: dbgutil.rs
quirc-wrapper/: Cargo.toml  build.rs  wrapper.h
quirc_wrapper/: build.rs
src/: decode.rs  identify.rs  lib.rs  math.rs  quirc.rs  version_db.rs
test-utils/: Cargo.toml
test-utils/src/: dbgutil.rs  lib.rs
tests/: TEST_IMAGES.md  dbgutil.rs  inspect.rs  qrtest.rs  tests.rs
tests/util/: dbgutil.rs
