[workspace]
members = [
    "test-utils",
    "quirc-wrapper",
]

[package]
name = "quirc-rs"
version = "0.1.0"
authors = ["Szabolcs Berecz <szabolcs.berecz@gmail.com>"]
edition = "2018"

[dependencies]
line_drawing = "0.7.0"
libc = "0.2.49"

[dev-dependencies]
chrono = "0.4.6"
clap = "2.32.0"
image = "0.20.0"
qrcode = "0.9.0"
quirc-wrapper = { path = "quirc-wrapper" }
sdl2 = "0.31.0"
sdl2-unifont = "1.0.1"
test-utils = { path = "test-utils" }
